--- a/src/components/SignUp/SignUp.module.css
+++ b/src/components/SignUp/SignUp.module.css
@@ -1,6 +1,4 @@
-
-
-.loginForm{
+.signUpForm{
     height: 100%;
     display: flex;
     justify-content: center;
@@ -10,7 +8,7 @@
     
 }
 
-.loginContainer{
+.signUpContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
