Navigation header added

--- a/src/components/ResetingPassword/ResetingPassword.module.css
+++ b/src/components/ResetingPassword/ResetingPassword.module.css
@@ -1,6 +1,6 @@
 
 
-.loginForm{
+.resetForm{
     height: 100%;
     display: flex;
     justify-content: center;
@@ -10,7 +10,7 @@
     
 }
 
-.loginContainer{
+.resetContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
