--- a/src/components/Doctor/Doctor.module.css
+++ b/src/components/Doctor/Doctor.module.css
@@ -1,7 +1,7 @@
 .datetimeCont{
     height: 100%;
     width: 10%;
-    background-color: darkgray;
+    background-color: rgb(236, 155, 205);
     font-size: 1.2rem;
 }
 
