--- a/src/components/StartPage/StartPage.module.css
+++ b/src/components/StartPage/StartPage.module.css
@@ -1,9 +1,7 @@
 .articles{
-    
-    width: 100%;
-   
-    display: flex; 
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px;
     gap: 20px;         
     
 }
