--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,9 +1,12 @@
 .articles{
-    
-    width: 100%;
-   
-    display: flex; 
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px;
     gap: 20px;         
     
+}
+
+.pages{
+    display: flex;
+    justify-content: center;
 }
