--- a/src/components/VideoArticle/VideoArticle.module.css
+++ b/src/components/VideoArticle/VideoArticle.module.css
@@ -1,25 +1,24 @@
 .articleWrapper{
-    width: 35%;
     border: 2px solid black;
     height: 100%;
     overflow: hidden;
     border-radius: 5px;
-    flex-grow: 3;
-    
+    font-family: 'Monaco', monospace;
 }
 
 
 
 .articleWrapper:hover{
-    background-color: black;
-    color: white;
+    background-color: rgb(236, 155, 205);
+    color: black;
 }
 
 .text{
-    height: 105px
+    height: 105px;
+    font-family: 'Monaco', monospace;
+    
 }
 
 .image{
     width: 100%;
 }
-
