--- a/src/components/SignUp/SignUp.module.css
+++ b/src/components/SignUp/SignUp.module.css
@@ -3,9 +3,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 80%;
+    overflow-y: auto;
     
     
-    
+}
+
+.cont{
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .signUpContainer{
@@ -13,8 +21,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    padding: 0 7rem;
-    gap: 1.5rem;
+    
+    overflow-y: auto;
+    padding: 8px;
+    gap: 8px;
     border: 2px solid #000;
 } 
