--- a/src/components/Exersices/VideoArticleModal/VideoArticleModal.module.css
+++ b/src/components/Exersices/VideoArticleModal/VideoArticleModal.module.css
@@ -1,8 +1,14 @@
 .articleWrapper{
+    margin: 10px;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    gap: 20px;
     
 }
 
 .image{
     width: 100%;
+    height: 80%;
 }
