--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -24,15 +24,17 @@
     border: 2px solid #000000;
     border-radius: 10px;
     font-size: 1.2rem;
-    max-width: 50vw;
-    max-height: 70vh;
+    width: 80%;
+    height: 85%;
+    /* max-width: 50vw;
+    max-height: 70vh; */
     overflow-y: auto;
     cursor: default;
 }
 
 .close{
     position: absolute;
-    top: 5%;
+    top: 10px;
     right: 5px;
     width: 1em;
     height: 1em;
