--- a/src/components/DoctorPage/DoctorPage.module.css
+++ b/src/components/DoctorPage/DoctorPage.module.css
@@ -1,19 +1,21 @@
 .datetimeCont{
     height: 100%;
     width: 10%;
-    background-color: rgb(236, 155, 205);
+    background-color: #FFBB69;
     font-size: 1.2rem;
 }
 
 .datetimeCont:active{
     height: 100%;
     width: 10%;
-    background-color: aqua;
+    background-color: #5C5552;
+    color: aliceblue;
     font-size: 1.2rem;
 }
 
 .datetimeCont:hover{
-    background-color: aqua;
+    color: aliceblue;
+    background-color: #5C5552;
 }
 
 .dateWrapper{
@@ -28,9 +30,14 @@
     max-height: 400px;
 }
 
+.messageList div div div{
+    background-color: #FFBB69;
+}
+
 .selectedItem{
     height: 100%;
     width: 10%;
-    background-color: aqua;
+    background-color: #5C5552;
+    color: aliceblue;
     font-size: 1.2rem;
 } 
